ledger address pulling script working

--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "homepage": "https://github.com/unchained-capital/ethereum-multisig#readme",
   "devDependencies": {
+    "@ledgerhq/hw-app-eth": "^4.7.3",
+    "@ledgerhq/hw-transport-node-hid": "^4.7.6",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.0.0",
     "browserify": "^15.2.0",
