--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ledgerhq/hw-app-eth": "^4.7.3",
     "@ledgerhq/hw-app-btc": "^4.12.0",
     "@ledgerhq/hw-transport-node-hid": "^4.7.6",
+    "@ledgerhq/hw-transport-u2f": "^4.12.0",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.0.0",
     "browserify": "^15.2.0",
