--- a/package.json
+++ b/package.json
@@ -36,8 +36,6 @@
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.0.0",
     "browserify": "^15.2.0",
-    "ethereumjs-testrpc": "^4.1.3",
-    "ethereumjs-wallet": "^0.6.0",
     "font-awesome": "^4.7.0",
     "highlightjs": "^9.10.0",
     "highlightjs-solidity": "^1.0.5",
@@ -47,12 +45,12 @@
     "popper.js": "^1.12.9",
     "solium": "^1.1.7",
     "tether": "^1.4.3",
-    "trezor.js-node": "^6.11.3",
+    "trezor.js": "^6.17.6",
     "truffle": "^4.1.13",
+    "ganache-cli": "^6.1.5",
     "web3": "^0.20.4"
   },
   "dependencies": {
-    "secp256k1": "^3.5.0",
     "serve": "^6.4.1"
   }
 }
