--- a/requirements.frozen.txt
+++ b/requirements.frozen.txt
@@ -1,24 +1,24 @@
 asn1crypto==0.24.0
 attrdict==2.0.0
+BTrees==4.5.0
 certifi==2018.4.16
 cffi==1.11.5
 chardet==3.0.4
 click==6.7
 coincurve==8.0.0
-configparser==3.5.0
 coverage==4.5.1
 cytoolz==0.9.0.1
 dictionaries==0.0.1
 ecdsa==0.13
-eth-abi==0.5.0
+eth-abi==1.1.1
 eth-account==0.2.3
 eth-hash==0.1.4
 eth-keyfile==0.5.1
 eth-keys==0.2.0b3
 eth-rlp==0.1.2
-eth-tester==0.1.0b11
-eth-utils==1.0.0b1
-ethereum==2.3.2
+eth-tester==0.1.0b28
+eth-utils==1.0.3
+ethereum==2.3.1
 future==0.16.0
 hexbytes==0.1.0
 hidapi==0.7.99.post21
@@ -29,7 +29,8 @@ lru-dict==1.1.6
 MarkupSafe==1.0
 mnemonic==0.18
 mock==2.0.0
-mythril==0.18.6
+mythril==0.18.5
+parsimonious==0.8.0
 pbkdf2==1.3
 pbr==4.1.0
 persistent==4.2.4.2
@@ -45,13 +46,19 @@ pysha3==1.0.2
 PyYAML==3.13
 repoze.lru==0.7
 requests==2.19.1
-rlp==1.0.1
+rlp==0.6.0
 scrypt==0.8.6
 semantic-version==2.6.0
 six==1.11.0
 toolz==0.9.0
+transaction==2.2.1
 trezor==0.9.0
 urllib3==1.23
-web3==3.16.5
+web3==4.4.1
+websockets==5.0.1
 z3-solver==4.5.1.0.post2
+zc.lockfile==1.3.0
+ZConfig==3.2.0
+ZODB==5.4.0
+zodbpickle==1.0.1
 zope.interface==4.5.0
