--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "unchained-ethereum-multisig",
   "version": "1.0.0",
-  "description": "2/3-multisig Trezor-backed cold wallet.",
+  "description": "2 of 3 multisig hardware wallet backed smart contract.",
   "main": "truffle.js",
   "directories": {
     "test": "test"
@@ -17,11 +17,13 @@
     "ethereum",
     "solidity",
     "multisig",
-    "trezor"
+    "trezor",
+    "ledger"
   ],
   "author": "Destry Saul <destry@unchained-capital.com>",
   "contributors": [
-    "Dhruv Bansal <dhruv@unchained-capital.com>"
+    "Dhruv Bansal <dhruv@unchained-capital.com>",
+    "Chris Howe <chris@unchained-capital.com>"
   ],
   "license": "Apache-2.0",
   "bugs": {
@@ -29,21 +31,23 @@
   },
   "homepage": "https://github.com/unchained-capital/ethereum-multisig#readme",
   "devDependencies": {
+    "@ledgerhq/hw-app-eth": "^4.7.3",
+    "@ledgerhq/hw-transport-u2f": "^4.12.0",
+    "@ledgerhq/hw-transport-node-hid": "^4.7.6",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.0.0",
     "browserify": "^15.2.0",
-    "ethereumjs-testrpc": "^4.1.3",
-    "ethereumjs-wallet": "^0.6.0",
     "font-awesome": "^4.7.0",
     "highlightjs": "^9.10.0",
     "highlightjs-solidity": "^1.0.5",
     "jquery": "^3.3.1",
-    "keccak": "^1.4.0",
     "pejs": "^0.6.5",
     "popper.js": "^1.12.9",
+    "solium": "^1.1.7",
     "tether": "^1.4.3",
-    "trezor.js-node": "^6.11.3",
-    "truffle": "^4.0.6",
+    "trezor.js": "^6.17.6",
+    "truffle": "^4.1.13",
+    "ganache-cli": "^6.1.5",
     "web3": "^0.20.4"
   },
   "dependencies": {
