--- a/requirements.frozen.txt
+++ b/requirements.frozen.txt
@@ -1,45 +1,64 @@
-BTrees==4.4.1
-certifi==2018.1.18
+asn1crypto==0.24.0
+attrdict==2.0.0
+BTrees==4.5.0
+certifi==2018.4.16
+cffi==1.11.5
 chardet==3.0.4
 click==6.7
-cytoolz==0.9.0
+coincurve==8.0.0
+coverage==4.5.1
+cytoolz==0.9.0.1
+dictionaries==0.0.1
 ecdsa==0.13
-eth-abi==0.5.0
-eth-keys==0.1.0b4
-eth-tester==0.1.0b11
-eth-utils==0.8.1
-ethereum==2.3.0
+eth-abi==1.1.1
+eth-account==0.2.3
+eth-hash==0.1.4
+eth-keyfile==0.5.1
+eth-keys==0.2.0b3
+eth-rlp==0.1.2
+eth-tester==0.1.0b28
+eth-utils==1.0.3
+ethereum==2.3.1
 future==0.16.0
+hexbytes==0.1.0
 hidapi==0.7.99.post21
-idna==2.6
-laser-ethereum==0.4.4
+idna==2.7
+Jinja2==2.10
 libusb1==1.6.4
 lru-dict==1.1.6
+MarkupSafe==1.0
 mnemonic==0.18
-mythril==0.12.5
+mock==2.0.0
+mythril==0.18.5
+parsimonious==0.8.0
 pbkdf2==1.3
+pbr==4.1.0
 persistent==4.2.4.2
-py-ecc==1.4.2
-py-solc==2.1.0
-pyblake2==1.1.0
-pycryptodome==3.4.11
+plyvel==1.0.4
+py-ecc==1.4.3
+py-flags==1.1.2
+py-solc==3.1.0
+pyblake2==1.1.2
+pycparser==2.18
+pycryptodome==3.6.4
 pyethash==0.1.27
 pysha3==1.0.2
-PyYAML==3.12
+PyYAML==3.13
 repoze.lru==0.7
-requests==2.18.4
+requests==2.19.1
 rlp==0.6.0
 scrypt==0.8.6
 semantic-version==2.6.0
 six==1.11.0
 toolz==0.9.0
-transaction==2.2.0
+transaction==2.2.1
 trezor==0.9.0
-urllib3==1.22
-web3==3.16.5
+urllib3==1.23
+web3==4.4.1
+websockets==5.0.1
 z3-solver==4.5.1.0.post2
-zc.lockfile==1.2.1
+zc.lockfile==1.3.0
 ZConfig==3.2.0
-ZODB==5.3.0
-zodbpickle==1.0
-zope.interface==4.4.3
+ZODB==5.4.0
+zodbpickle==1.0.1
+zope.interface==4.5.0
